crates/ars-components/src/data_display/table/snapshots/ars_components__data_display__table__tests__table_select_all_checked.snap
---
source: crates/ars-components/src/data_display/table/tests.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "select-all-checkbox",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "table",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Select all 2 rows",
            ),
        ),
        (
            Checked,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "checkbox",
            ),
        ),
    ],
    styles: [],
}
